# MTAPI

./: .gitignore  Dockerfile  app.py  main.py  pyproject.toml  settings.cfg
mtapi/: mtapi.py
scripts/: stations.csv  stations.json
