[project]
name = "mtapi"
version = "0.1.0"
description = "MTA Realtime API JSON Proxy"
requires-python = ">=3.12"
dependencies = [
    "flask==3.1.3",
    "protobuf==6.33.5",
    "pytz==2025.2",
    "certifi==2026.2.25",
    "requests==2.33.1",
    "pyopenssl",
    "ndg-httpsclient",
    "pyasn1",
    "requests[security]",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
]

[tool.uv]
package = false
